tests/errors/string_58/SETCHAR1.src
.IPPcode21

DEFVAR GF@str
MOVE GF@str string@A
SETCHAR GF@str int@0 string@